Senior_Project/src/senior/project/test/server/errors/ServerInvalidUnitException.java
package senior.project.test.server.errors;

/**
 *
 * @author Paul Jones
 */
public class ServerInvalidUnitException extends ServerRuntimeException {

  public ServerInvalidUnitException(String msg) {
    super(msg);
  }
}
